cabal-version:      2.4
name:               linear-mergesort
version:            0.1.0.0

author:             Chaitanya Koparkar
maintainer:         ckoparkar@gmail.com

library
    exposed-modules:  LinearMergesort
    other-modules:    Array
    ghc-options:      -Wall -Wcompat -fdefer-typed-holes
    build-depends:    base        >= 4.15 && < 4.16
                    , linear-base >= 0.1  && < 0.2
    default-language: Haskell2010
